2008-04-24  Will Cohen  <wcohen@redhat.com>

	* aclocal.m4: Regenerated.
	* Makefile.am (example/*): Moved to testsuite/systemtap.examples.
	* Makefile.in: Regenerated.

2008-04-23  Frank Ch. Eigler  <fche@elastic.org>

	From: Srinivasa DS <srinivasa@in.ibm.com>
	* tapsets.cxx (blacklisted_p): Blacklist more init/exit sections.

2008-04-23  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (common_probe_entryfn_prologue): Clear
	overload-related context vars.

2008-04-22  hunt  <hunt@redhat.com>

	* staprun.8.in: Add documentation for -d option.

2008-04-22  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_module_decls):
	Removed debug statements.

2008-04-18  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (struct utrace_builder): Added exec probes.
	(utrace_derived_probe_group::emit_probe_decl): Ditto.
	(utrace_derived_probe_group::emit_module_decls): Ditto.
	(register_standard_tapsets): Ditto.
	* stapprobes.5.in: Added information about exec probes.
	* NEWS: Added information about utrace probes.

	* stapprobes.5.in: Added information about utrace probes.

2008-04-17  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (build_blacklist): Fix regexps for atomics.
	* vim/syntax/stap.vim: Recognize the 'limit' keyword and script arguments,
	allow '$' in variable names, and highlight $target variables.

2008-04-17  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_builder::build): Make sure that the PATH of
	'process("PATH")' probes is an absolute path.
	(utrace_derived_probe_group::emit_module_decls): Made calls to
	utrace probe handler functions conditional on which types of
	utrace probes are going to be output.

2008-04-16  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (task_finder_derived_probe): Add dummy constructor
	for old (RHEL4) gcc compatibility.

2008-04-16  Frank Ch. Eigler  <fche@elastic.org>

	PR 6417: From Srinivasa DS <srinivasa@in.ibm.com>:
	* tapsets.cxx (build_blacklist): Extend.
