@@ -1,3 +1,10 @@
+2008-04-24  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 6454.
+	* main.cxx (printscript): Avoid string truncation heuristics, and
+	also avoid plain probe::printsig.  Hold nose and dig down into
+	raw location lists instead.
+
 2008-04-24  Will Cohen  <wcohen@redhat.com>
 
 	* aclocal.m4: Regenerated.
